Fix responsive layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,17 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+.header h1 {
+  font-size: 2.2rem;
+}
+
 .nav-bar {
   background-color: #094067;
   width: 100%;
   height: 50px;
   display: grid;
   gap: 10px;
-  grid-template-columns: repeat(1, 0fr);
+  grid-template-columns: repeat(1, 1fr);
   text-align: center;
   padding: 0;
 }
@@ -400,6 +404,7 @@ button:active {
 
   .page {
     padding: 15px;
+    max-width: 1400px;
   }
 
   .grid-container {
@@ -458,10 +463,6 @@ button:active {
     outline: none;
     transition: background-color 0.3s ease;
     text-align: center;
-  }
-
-  .page {
-    max-width: 1400px;
   }
 
   .grid-container {
@@ -533,5 +534,8 @@ button:active {
   }
   .nav-bar a {
     font-size: 18px;
+  }
+  .page {
+    max-width: 1400px;
   }
 }
